--- a/src/404.html
+++ b/src/404.html
@@ -173,7 +173,7 @@
         <h1 class="text-white">Oops!</h1>
         <img src="Assets/oops.png" alt="Hmmm...." style="width: 15rem; height: auto" />
         <div>
-            <h2 class="text-white error">Error 404</h2>
+            <h2 class="text-white d-inline-flex bg-danger p-1 rounded mb-3">Error 404</h2>
         </div>
         <h4 class="text-white">it seems that the page <i id="url"></i> does not exist on this server...</h4>
         <div class="d-inline-flex">
