--- a/src/equations.html
+++ b/src/equations.html
@@ -178,7 +178,7 @@
         </div>
         <br>
         <div class="center-form">
-            <input type="submit" id="button" class="btn btn-success btn-lg" value="Solve for X">
+            <input type="submit" id="button" class="btn btn-success btn-lg equation" value="Solve for X">
         </div>
         </form>
         <br />
@@ -200,7 +200,7 @@
         </div>
         <br>
         <div class="center-form">
-            <input type="submit" id="button2" class="btn btn-success btn-lg" value="Solve for X">
+            <input type="submit" id="button2" class="btn btn-success btn-lg equation" value="Solve for X">
         </div>
         </form>
         <br />
@@ -222,7 +222,7 @@
         </div>
         <br>
         <div class="center-form">
-            <input type="submit" id="button3" class="btn btn-success btn-lg" value="Solve for X">
+            <input type="submit" id="button3" class="btn btn-success btn-lg equation" value="Solve for X">
         </div>
         </form>
         <br />
