--- a/src/stats.html
+++ b/src/stats.html
@@ -168,8 +168,8 @@
     <div class="container-sm">
         <h1 class="text-white">Your Statistics</h1>
         <hr class="bg-danger" />
-        <button class="btn btn-success" onclick="loadStats()" style="margin-right: 20px; margin-bottom: 20px; margin-bottom: 20px;">Refresh Stats <i class="bi bi-arrow-clockwise"></i></button>
-        <button class="btn btn-danger" onclick="clearStats()" style="margin-right: 20px; margin-bottom: 20px; margin-bottom: 20px;">Reset Stats <i class="bi bi-trash-fill"></i></button>
+        <button class="btn btn-success me-3 mb-3" onclick="loadStats()">Refresh Stats <i class="bi bi-arrow-clockwise"></i></button>
+        <button class="btn btn-danger me-3 mb-3" onclick="clearStats()">Reset Stats <i class="bi bi-trash-fill"></i></button>
         <p class="text-white">Total Visits: <span id="page-views"></span></p>
         <p class="text-white">Total Statistics Page Views: <span id="stat-views"></span></p>
         <p class="text-white">Total Equations Solved: <span id="equations-solved"></span></p>
