--- a/src/index.html
+++ b/src/index.html
@@ -166,21 +166,21 @@
     </div>
     </nav>
     <!-- NAVBAR END -->
-    <div class="alert alert-light alert-dismissible fade show m-2 text-center" style="z-index: 99999;" role="alert">
-        Long time no see stanger... Check out our <a href="equations-second.html" class="alert-link">2nd degree equation solver</a>!
+    <div class="alert alert-light alert-dismissible fade show m-2 text-center user-select-none" style="z-index: 99999;" role="alert">
+        Long time no see stanger... Check out our <a href="equations-second.html" class=" text-dark">2nd degree equation solver</a>!
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
     <div class="dead-center">
         <h1 class="text-white fs-1">MathFlare</span></h1>
         <h3 class="text-danger fs-3">the go-to site for geometry and algebra</h3>
         <div class="d-inline-flex">
-            <a href="https://github.com/mathflare" target="_blank" rel="noopener" class="btn btn-outline-light m-1"><i class="bi bi-github"></i> GitHub</a>
-            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-warning m-1"><i class="bi bi-bug-fill"></i> Report a Bug</a>
-            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-success m-1"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
+            <a href="https://github.com/mathflare" target="_blank" rel="noopener" class="btn btn-outline-light m-2"><i class="bi bi-github"></i> GitHub</a>
+            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-warning m-2"><i class="bi bi-bug-fill"></i> Report a Bug</a>
+            <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener" class="btn btn-success m-2"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
         </div>
-        <div class="">
-            <a href="https://www.binance.com/en/trade/DOGE_USDT" target="_blank" rel="noopener" class="btn btn-info m-1 text-white" data-toggle="tooltip" data-placement="bottom" title="Sponsored"><i class="bi bi-currency-bitcoin"></i> Buy DogeCoin</a>
-            <a href="https://www.instagram.com/mathflare" target="_blank" rel="noopener" class="btn btn-danger m-1" data-toggle="tooltip" data-placement="bottom" title="Sponsored"><i class="bi bi-instagram"></i> Instagram</a>
+        <div>
+            <a href="https://www.binance.com/en/trade/DOGE_USDT" target="_blank" rel="noopener" class="btn btn-info m-2 text-white" data-toggle="tooltip" data-placement="bottom" title="Sponsored"><i class="bi bi-currency-bitcoin"></i> Buy DogeCoin</a>
+            <a href="https://www.instagram.com/mathflare" target="_blank" rel="noopener" class="btn btn-danger m-2" data-toggle="tooltip" data-placement="bottom" title="Sponsored"><i class="bi bi-instagram"></i> Instagram</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
