--- a/src/formulas.html
+++ b/src/formulas.html
@@ -232,7 +232,7 @@
             dataType: "json",
             cache: true,
             success: (response) => {
-                console.log(response)
+                console.log(response.thirtydeg.Deg)
             }
         });
     </script>
