added more info buttons

--- a/src/equations-second.html
+++ b/src/equations-second.html
@@ -186,6 +186,9 @@
             <p class="text-success" id="output"></p>
         </div>
         <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener" class="btn btn-outline-light">Acquire More Knowledge</a>
+        </div>
         <!-- ax^2=c END -->
         <!-- X - Y = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
@@ -208,6 +211,9 @@
             <p class="text-success" id="output2"></p>
         </div>
         <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener" class="btn btn-outline-light">Acquire More Knowledge</a>
+        </div>
         <!-- X - Y = Z END -->
         <!-- YX = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
@@ -234,6 +240,9 @@
             <p class="text-success" id="output3"></p>
         </div>
         <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener" class="btn btn-outline-light">Acquire More Knowledge</a>
+        </div>
         <!-- YX = Z END  -->
     </div>
     <!-- SCRIPTS START -->
