--- a/src/linear-systems.html
+++ b/src/linear-systems.html
@@ -213,6 +213,9 @@
             <p class="text-success" id="output"></p>
         </div>
         <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=Solve+Linear+2x2+systems" target="_blank" rel="noopener" class="btn btn-outline-light">Acquire More Knowledge</a>
+        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
