--- a/src/equations-second.html
+++ b/src/equations-second.html
@@ -187,7 +187,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener" class="btn btn-outline-light">Acquire More Knowledge</a>
+            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- ax^2=c END -->
         <!-- X - Y = Z START -->
@@ -212,7 +212,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener" class="btn btn-outline-light">Acquire More Knowledge</a>
+            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- X - Y = Z END -->
         <!-- YX = Z START -->
@@ -241,7 +241,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener" class="btn btn-outline-light">Acquire More Knowledge</a>
+            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- YX = Z END  -->
     </div>
