--- a/src/equations.html
+++ b/src/equations.html
@@ -187,7 +187,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Acquire More Knowledge</a>
+            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- X + Y = Z END -->
         <!-- X - Y = Z START -->
@@ -212,7 +212,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Acquire More Knowledge</a>
+            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- X - Y = Z END -->
         <!-- YX = Z START -->
@@ -237,7 +237,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Acquire More Knowledge</a>
+            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- YX = Z END  -->
     </div>
