--- a/src/index.html
+++ b/src/index.html
@@ -252,6 +252,7 @@
             }
         });
     </script>
+    <script src="js/avg.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
