--- a/src/logar.html
+++ b/src/logar.html
@@ -184,6 +184,9 @@
             <p class="text-success" id="output"></p>
         </div>
         <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=logarithm" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
