--- a/src/linear-systems.html
+++ b/src/linear-systems.html
@@ -214,7 +214,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=Solve+Linear+2x2+systems" target="_blank" rel="noopener" class="btn btn-outline-light">Acquire More Knowledge</a>
+            <a href="https://www.google.com/search?q=Solve+Linear+2x2+systems" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
