--- a/src/pow.html
+++ b/src/pow.html
@@ -144,7 +144,8 @@
                         <a href="logar.html" class="dropdown-item"><i class="bi bi-percent"></i> Logarithms</a>
                         <a href="sqrt.html" class="dropdown-item"><i class="bi bi-calculator"></i> Square Root Calculator</a>
                         <a href="cbrt.html" class="dropdown-item"><i class="bi bi-calculator"></i> Cube Root Calculator</a>
-                        <a href="pow.html" class="dropdown-item aactive"><i class="bi bi-power"></i> Powers</a>
+                        <a href="pow.html" class="dropdown-item aactive"><i class="bi bi-power"></i> Exponents(powers)</a>
+                        <a href="avg.html" class="dropdown-item"><i class="bi bi-pie-chart"></i> Average Calculator</a>
                         <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Equations</h5>
                         <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
@@ -168,12 +169,12 @@
         <form autocomplete="off">
         <h4 class="text-white">Enter the base</h4>
         <div class="center-form">
-            <input type="number" id="base" placeholder="base" name="side" class="form-control mb-0" step="0.01" min="0" />
+            <input type="number" id="base" placeholder="base" class="form-control mb-0" step="0.01"/>
         </div>
         <br />
         <h4 class="text-white">Enter the exponent</h4>
         <div class="center-form">
-            <input type="number" id="exp" placeholder="exponent" name="side" class="form-control mb-0" step="0.01" min="0" />
+            <input type="number" id="exp" placeholder="exponent" class="form-control mb-0" step="0.01"/>
         </div>
         <br />
         <div class="center-form">
