--- a/src/avg.html
+++ b/src/avg.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MathFlare - Parallelogram</title>
+    <title>MathFlare - Average</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
     <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
@@ -74,7 +74,7 @@
                         <a href="https://github.com/mathflare/mathflare/issues" target="_blank" class="dropdown-item"><i class="bi bi-lightbulb-fill"></i> Suggest an Edit</a>
                     </div>
                 </li>
-                <li class="nav-item dropdown active">
+                <li class="nav-item dropdown">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Area Calculator
                         <i class="bi bi-caret-down-fill"></i>
@@ -82,7 +82,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a href="atriangle.html" class="dropdown-item"><i class="bi bi-triangle"></i> Triangle</a>
                         <a href="acircle.html" class="dropdown-item"><i class="bi bi-circle"></i> Circle</a>
-                        <a href="apara.html" class="dropdown-item aactive"><i class="bi bi-file"></i> Parallelogram</a>
+                        <a href="apara.html" class="dropdown-item"><i class="bi bi-file"></i> Parallelogram</a>
                         <a href="asquare.html" class="dropdown-item"><i class="bi bi-square"></i> Square</a>
                         <a href="atrapezoid.html" class="dropdown-item"><i class="bi bi-pentagon"></i> Trapezoid</a>
                     </div>
@@ -134,7 +134,7 @@
                         <a href="license.html" class="dropdown-item"><i class="bi bi-credit-card-2-front"></i> Software License</a>
                     </div>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Algebra
                         <i class="bi bi-caret-down-fill"></i>
@@ -145,7 +145,7 @@
                         <a href="sqrt.html" class="dropdown-item"><i class="bi bi-calculator"></i> Square Root Calculator</a>
                         <a href="cbrt.html" class="dropdown-item"><i class="bi bi-calculator"></i> Cube Root Calculator</a>
                         <a href="pow.html" class="dropdown-item"><i class="bi bi-power"></i> Exponents(powers)</a>
-                        <a href="avg.html" class="dropdown-item"><i class="bi bi-pie-chart"></i> Average Calculator</a>
+                        <a href="avg.html" class="dropdown-item aactive"><i class="bi bi-pie-chart"></i> Average Calculator</a>
                         <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Equations</h5>
                         <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
@@ -164,34 +164,25 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Parallelogram</h1>
+        <h1 class="text-white">Average Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
-        <h4 class="text-white">Enter the parallelogram's width</h4>
+        <h4 class="text-white">Enter the numbers in the correct format</h4>
         <div class="center-form">
-            <input type="number" id="width" placeholder="width" name="side" class="form-control mb-0" step="0.01" min="0" />
-        </div>
-        <br />
-        <h4 class="text-white">Enter the parallelogram's height</h4>
-        <div class="center-form">
-            <input type="number" id="height" placeholder="height" name="side" class="form-control mb-0" step="0.01" min="0" />
+            <textarea id="input" placeholder="eg. 1,-3,8,12.4,-2" class="form-control" required></textarea>
         </div>
         <br />
         <div class="center-form">
             <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
         </div>
         </form>
-        <br />
+        <br>
         <div style="max-height: 1em;">
             <p class="text-success" id="output"></p>
         </div>
-        <br />
-        <div id="shape" class="dynamic-shape-para" title="shape visualization"></div>
-        <div class="formula">
-            <b class="text-white show-formula"><u>show formula</u></b>
-            <p id="formula" class="text-white">
-                multiply the parallelogram's height with its width
-            </p>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=calculate+average" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
@@ -200,10 +191,7 @@
     <script src="OAuth/SignIn.js"></script>
     <script src="OAuth/SignOut.js"></script>
     <script src="OAuth/OnSignOut.js"></script>
-    <script src="js/apara.js"></script>
-    <script>
-
-    </script>
+    <script src="js/avg.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
