--- a/src/sqrt.html
+++ b/src/sqrt.html
@@ -144,6 +144,8 @@
                         <a href="logar.html" class="dropdown-item"><i class="bi bi-percent"></i> Logarithms</a>
                         <a href="sqrt.html" class="dropdown-item aactive"><i class="bi bi-calculator"></i> Square Root Calculator</a>
                         <a href="cbrt.html" class="dropdown-item"><i class="bi bi-calculator"></i> Cube Root Calculator</a>
+                        <a href="pow.html" class="dropdown-item"><i class="bi bi-power"></i> Exponents(powers)</a>
+                        <a href="avg.html" class="dropdown-item"><i class="bi bi-pie-chart"></i> Average Calculator</a>
                         <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Equations</h5>
                         <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
@@ -167,7 +169,7 @@
         <form autocomplete="off">
         <h4 class="text-white">Enter the number</h4>
         <div class="center-form">
-            <input type="number" id="number" placeholder="number" name="side" class="form-control mb-0" step="0.01" min="0" />
+            <input type="number" id="number" placeholder="radicand" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br />
         <div class="center-form">
