--- a/src/percent.html
+++ b/src/percent.html
@@ -1,10 +1,12 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- MAIL -->
+    <meta name="yandex-verification" content="f86171133514f762" />
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MathFlare - 404</title>
+    <title>MathFlare - Percentage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
     <meta name="keywords" content="liquidgeometry,liquid geometry,liquid-geometry,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle, mathflare, math-flare, math flare">
@@ -31,14 +33,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="Assets/logo.png">
-    <style>
-        .error {
-            display: inline-flex; 
-            padding: 5px;
-            border-radius: 5px;
-            background-color: var(--bs-danger);
-        }
-    </style>
     <!-- SCRIPTS -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <!-- GOOGLE ANALYTICS -->
@@ -142,7 +136,7 @@
                         <a href="license.html" class="dropdown-item"><i class="bi bi-credit-card-2-front"></i> Software License</a>
                     </div>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Algebra
                         <i class="bi bi-caret-down-fill"></i>
@@ -154,7 +148,7 @@
                         <a href="cbrt.html" class="dropdown-item"><i class="bi bi-calculator"></i> Cube Root Calculator</a>
                         <a href="pow.html" class="dropdown-item"><i class="bi bi-power"></i> Exponents(powers)</a>
                         <a href="avg.html" class="dropdown-item"><i class="bi bi-pie-chart"></i> Average Calculator</a>
-                        <a href="percent.html" class="dropdown-item"><i class="bi bi-percent"></i> Percentage Calculator</a>
+                        <a href="percent.html" class="dropdown-item aactive"><i class="bi bi-percent"></i> Percentage Calculator</a>
                         <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Equations</h5>
                         <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
@@ -172,42 +166,85 @@
     </div>
     </nav>
     <!-- NAVBAR END -->
-    <div class="dead-center">
-        <h1 class="text-white">Oops!</h1>
-        <img src="Assets/oops.png" alt="Hmmm...." style="width: 15rem; height: auto" />
-        <div>
-            <h2 class="text-white d-inline-flex bg-danger p-1 rounded mb-3">Error 404</h2>
+    <div class="center">
+        <h1 class="text-white">Percentages</h1>
+        <hr class="bg-danger" style="width: 60%;" />
+        <form autocomplete="off">
+        <h4 class="text-white">Fraction to Percentage <sup>X</sup>&frasl;<sub>Y</sub></h4>
+        <div class="center-form">
+            <input type="number" id="num1" placeholder="X" class="form-control mb-0" step="0.01" />
         </div>
-        <h4 class="text-white">it seems that the page <i id="url"></i> does not exist on this server...</h4>
-        <div class="d-inline-flex">
-            <form action="index.html">
-                <button class="btn btn-primary m-1">
-                    <i class="bi bi-house"></i>
-                    Go to the Home Page
-                </button>
-            </form>
-            <form action="https://github.com/liquid-geometry/liquidgeometry/issues" target="_blank">
-                <button class="btn btn-warning m-1">
-                    <i class="bi bi-bug-fill"></i>
-                    Report a Bug
-                </button>
-            </form>
+        <br>
+        <div class="center-form">
+            <input type="number" id="den1" placeholder="Y" class="form-control mb-0" step="0.01" />
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
+        </div>
+        </form>
+        <br />
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=fraction+to+percentage" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+        </div>
+        <hr class="bg-danger" style="width: 50%;" />
+        <form autocomplete="off">
+        <h4 class="text-white">Percentage of X</h4>
+        <div class="center-form">
+            <input type="number" id="num2" placeholder="X" class="form-control mb-0" step="0.01" />
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="number" id="per2" placeholder="%" class="form-control mb-0" step="0.01" />
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="submit" id="button2" class="btn btn-success btn-lg" value="Calculate">
+        </div>
+        </form>
+        <br />
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output2"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=calculate+percentage" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
+        </div>
+        <hr class="bg-danger" style="width: 50%;" />
+        <form autocomplete="off">
+        <h4 class="text-white">Percentage Difference</h4>
+        <div class="center-form">
+            <input type="number" id="init3" placeholder="initial value" class="form-control mb-0" step="0.01"/>
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="number" id="fin3" placeholder="final value" class="form-control mb-0" step="0.01" />
+        </div>
+        <br>
+        <div class="center-form">
+            <input type="submit" id="button3" class="btn btn-success btn-lg" value="Calculate">
+        </div>
+        </form>
+        <br />
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output3"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=calculate+percentage+difference" target="_blank" rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
-    <script src="../Scripts/jquery-3.0.0.js"></script>
-    <script src="../Scripts/bootstrap.js"></script>
-    <script src="../OAuth/SignIn.js"></script>
-    <script src="../OAuth/SignOut.js"></script>
-    <script src="../OAuth/OnSignOut.js"></script>
-    <script>
-        $(document).ready(function () {
-            var url = window.location.pathname;
-            $("#url").text(url.replace('/', ''));
-            console.error('ERROR 404');
-            console.error('the page ' + window.location.pathname + ' does not exists. It may have been moved, edited or deleted.');
-        });
-    </script>
+    <script src="Scripts/jquery-3.0.0.js"></script>
+    <script src="Scripts/bootstrap.js"></script>
+    <script src="OAuth/SignIn.js"></script>
+    <script src="OAuth/SignOut.js"></script>
+    <script src="OAuth/OnSignOut.js"></script>
+    <script src="js/percentage.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
