--- a/src/atrapezoid.html
+++ b/src/atrapezoid.html
@@ -76,11 +76,17 @@
                 </li>
                 <li class="nav-item dropdown active">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Area Calculator
+                        Geometry
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <h5 class="dropdown-header">Basic Geometry</h5>
+                        <a href="perimeter.html" class="dropdown-item"><i class="bi bi-bounding-box"></i> Perimeter Calculator</a>
+                        <a href="diagpolyg.html" class="dropdown-item"><i class="bi bi-slash-square"></i> Diagonal Calculator</a>
+                        <div class="dropdown-divider"></div>
+                        <h5 class="dropdown-header">Area Calculator</h5>
                         <a href="atriangle.html" class="dropdown-item"><i class="bi bi-triangle"></i> Triangle</a>
+                        <a href="aequtri.html" class="dropdown-item"><i class="bi bi-triangle"></i> Equilateral Triangle</a>
                         <a href="acircle.html" class="dropdown-item"><i class="bi bi-circle"></i> Circle</a>
                         <a href="apara.html" class="dropdown-item"><i class="bi bi-file"></i> Parallelogram</a>
                         <a href="asquare.html" class="dropdown-item"><i class="bi bi-square"></i> Square</a>
