--- a/src/avg.html
+++ b/src/avg.html
@@ -176,7 +176,7 @@
         <form autocomplete="off">
         <h4 class="text-white">Enter the numbers in the correct format</h4>
         <div class="center-form">
-            <textarea id="input" placeholder="eg. 1,-3,8,12.4,-2" class="form-control" required></textarea>
+            <textarea id="input" placeholder="eg. 1,-3,8,12.4,-2" class="form-control message" required></textarea>
         </div>
         <br />
         <div class="center-form">
