removed user message

--- a/src/index.html
+++ b/src/index.html
@@ -177,10 +177,10 @@
     </div>
     </nav>
     <!-- NAVBAR END -->
-    <div class="alert alert-dismissible fade show m-2 text-center user-select-none" style="z-index: 99999;" role="alert">
+    <!-- <div class="alert alert-dismissible fade show m-2 text-center user-select-none" style="z-index: 99999;" role="alert">
         Long time no see stanger... Check out our <a href="equations-second.html" class=" text-dark">2nd degree equation solver</a>!
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
+      </div> -->
     <div class="dead-center">
         <h1 class="text-white fs-1">MathFlare</span></h1>
         <h3 class="text-danger fs-3">the go-to site for geometry and algebra</h3>
